trying to fix footer to bottom on iphone

--- a/main.css
+++ b/main.css
@@ -144,7 +144,7 @@ h1 {
 
 footer {
   background-image: url("images/pattern-hills.svg");
-  background-size: 250% 10.625rem;
+  background-size: 250% 170px;
   background-position: bottom;
   /* background-position: bottom right -5rem; */
   background-repeat: no-repeat;
